Client module created

--- a/zurichapi/appsettings.json
+++ b/zurichapi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-KGC5HCT\\SQLEXPRESS;Database=ZurichDb;Trusted_Connection=True;Encrypt=False;"
+  }
 }
