Added JWT and roles

--- a/zurichapi/appsettings.json
+++ b/zurichapi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-KGC5HCT\\SQLEXPRESS;Database=ZurichDb;Trusted_Connection=True;Encrypt=False;"
+  },
+  "Jwt": {
+    "Key": "nX4$k7J!mR2#sV9@pF8&zY3^dW1*eQ6%",
+    "Issuer": "ZurichApp",
+    "Audience": "ZurichApp"
   }
 }
